--- a/style.css
+++ b/style.css
@@ -84,3 +84,31 @@ body {
   font-size: 0.8rem;
   padding-bottom: 0.5rem;
 }
+
+/* Button */
+.button {
+  width: 100%;
+  background: #fff;
+  border: none;
+  border-radius: 30px;
+  padding: 14px 14px;
+  font-size: 0.9rem;
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #0145ff;
+  outline: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  border: 2px solid #fff;
+  color: #fff;
+  background: transparent;
+  transition: 0.3s ease-in-out;
+}
+
+p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.8rem;
+}
